[package]
name = "f6tgbot"
version = "0.1.0"
authors = ["Ace Kim <quickwshell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
telegram-bot = { git = "https://github.com/Mephistophiles/telegram-bot.git" }
futures = "0.3.12"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.19"
chrono-tz = "0.5.3"
serde = "1"
toml = "0.5.8"
rand = "0.8.3"
sha3 = "0.9.1"
hex = "0.4.2"
aes-gcm-siv = "0.9.0"
sqlite = "0.25.3"
pkg-version = "1.0.0"